creating defaulvalues.css

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="content/logotype.png" />
+    <link rel="stylesheet" href="css/defaultvalues.css">
     <link rel="stylesheet" href="css/mainstyles.css">
     <link rel="script" href= "./stars.js">
 
@@ -137,7 +138,7 @@
         <div class="dropdown">
                 <button class="dropbtn">Other</button>
                 <div class="dropdown-content">
-                    <a href="#", onclick="location.href='http://z3.joinserver.xyz:25610'"\>Partners</a>
+                    <a href="#", onclick="location.href='./partners.html'"\>Partners</a>
                 </div>
         </div> 
 
