--- a/map.html
+++ b/map.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Map</title>
+    <title>Map</title>
+    <link rel="shortcut icon" href="content/logotype.png" />
+    <link rel="stylesheet" href="css/defaultvalues.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
         body {
