--- a/main.html
+++ b/main.html
@@ -152,7 +152,7 @@
     </div>
    </div>
    <div class="container"> 
-      <img src="content/earth.png", class = "move-up-down"/>
+      <img src="content/earth.png", onhover = "func()", class = "move-up-down"/>
    </div>
 </body>
 </html>
