--- a/partners.html
+++ b/partners.html
@@ -7,5 +7,6 @@
     <link rel="stylesheet" href="css/defaultvalues.css"><!DOCTYPE html>
 </head>
 <body>
+    <script src="js/stars.js"></script>     
 </body>
 </html>
