--- a/earn.html
+++ b/earn.html
@@ -8,5 +8,6 @@
     <link rel="shortcut icon" href="content/logotype.png"/>
 </head>
 <body>
+    <script src="js/stars.js"></script>     
 </body>
 </html>
