--- a/main.html
+++ b/main.html
@@ -23,20 +23,19 @@
   <div class="navbar">  
     <div class = "upperbuttons">
         <div class = 'leftside'>
-                <button class="btn",id="lang", onclick = "changeLanguange()">EN</button>
-
+            <button class="btn",id="lang", onclick = "changeLanguange()">EN</button>
         <div class="dropdown">
                 <button class="dropbtn">Other</button>
                 <div class="dropdown-content">
+                    <a href="#", onclick="location.href='./earn.html'"\>Earn</a>
                     <a href="#", onclick="location.href='./partners.html'"\>Partners</a>
                 </div>
         </div> 
-
+            <button class="btn", onclick="location.href='./donate.html'">Donate</button>
         </div>
     <div class='logo'>TonCraft</div>
         <div class = 'rightside'>
-            <button class="btn", onclick="location.href='./map.html'">Map</button>     
-            <button class="btn", onclick="location.href='./donate.html'">Donate</button>
+            <button class="btn", onclick="location.href='./map.html'">Map</button>                 
             <button class="btn", onclick="location.href='./earn.html'">Earn</button>
         </div>
     </div>
