--- a/login.html
+++ b/login.html
@@ -94,6 +94,11 @@
                 style="position: absolute; top: 0; right: 0; transform: translate(1rem, -1rem);">
         </div>
 
+<div class="login-form input-container">
+            <input type="text" class="login-form login-input" />
+        </div>
+
+
         <button class="btn login-form login-btn " style="font-size: 2em; position: relative;">Login
             <img src="./content/star.svg" alt=""
                 style="position: absolute; bottom: 0; left: 0; transform: translate(-1rem, 1rem);">
