--- a/login.html
+++ b/login.html
@@ -26,12 +26,14 @@
             gap: 2%;
             max-width: 600px;
             max-height: 800px;
-            min-width: 360px;
+            min-width: 380px;
             min-height: 540px;
             white-space: nowrap;
             text-overflow: ellipsis;
             box-sizing: border-box;
 
+            /* might want to change this margin  later */
+            margin: 10vh auto;
             border: rgb(210, 233, 233) 6px solid;
         }
 
@@ -79,6 +81,7 @@
 <body>
     <!-- login form html -->
     <div class="login-box" style="margin: auto; margin-top: 100px !important;">
+
         <div class="star-container"
             style=" position: absolute; top: 0; left: 0; transform: translate(-1.3rem, -1.3rem);">
             <img src="./content/star.svg" alt="" id="wrap-star">
