--- a/loginForm/login.html
+++ b/loginForm/login.html
@@ -10,6 +10,10 @@
 
     <!-- login form styles -->
     <style>
+        /* * {
+            outline: 1px solid red;
+        } */
+
         html,
         body {
             min-height: 100vh;
@@ -25,15 +29,15 @@
             position: relative;
             background-color: black;
             height: 60vh;
-            width: 26vw;
+            width: 60vw;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 2%;
-            max-width: 600px;
+            max-width: 500px;
             max-height: 900px;
-            min-width: 380px;
+            min-width: 360px;
             min-height: 540px;
             white-space: nowrap;
             text-overflow: ellipsis;
@@ -75,7 +79,7 @@
         .login-input {
             width: 100%;
             height: 100%;
-            font-size: 1.5rem;
+            font-size: 3rem;
         }
 
         .input-container {
@@ -117,7 +121,8 @@
 
         <h2 class="login-box-text" style="font-size: 1rem; margin: 1% 0;">Ваш никнейм</h2>
         <div class="login-form input-container">
-            <input type="text" class="login-form login-input" autocomplete="off" maxlength="16" id="nickname" />
+            <input type="text" class="login-form login-input" oninput="changefontsize()" autocomplete="off"
+                maxlength="16" id="nickname" />
             <img src="../content/star.svg" alt=""
                 style="position: absolute; top: 0; right: 0; transform: translate(1rem, -1rem);">
         </div>
