--- a/main.html
+++ b/main.html
@@ -7,27 +7,53 @@
     <link rel="shortcut icon" href="content/logotype.png" />
     <link rel="stylesheet" href="css/defaultvalues.css">
     <link rel="stylesheet" href="css/main.css">
-
-    <html lang=userLang>
-
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="./loginForm/login.css">
 </head>
 
-<body style='background-color: rgba(48, 27, 70, 0.899);'>
+<body>
+    <div class="bg-blur hide" onclick="hideLogin()">
+        <div class="login-box-wrapper" onclick="event.stopPropagation()">
+            <div class="login-box">
+                <div class="star-container"
+                    style=" position: absolute; top: 0; left: 0; transform: translate(-1.3rem, -1.3rem);">
+                    <img src="../content/star.svg" alt="" id="wrap-star">
+                </div>
+
+                <h2 class="login-box-text" style="font-size: 1rem; margin: 1% 0;">Your nickname</h2>
+                <div class="login-form input-container">
+                    <input type="text" class="login-form login-input" oninput="changefontsize()" autocomplete="off"
+                        maxlength="16" id="nickname" />
+                    <img src="../content/star.svg" alt=""
+                        style="position: absolute; top: 0; right: 0; transform: translate(1rem, -1rem);">
+                </div>
+                <div class="hide login-form input-container" id="verifCodeContainer" style="position: relative;">
+                    <input type="text" class="login-form login-input" style="font-size: 26px;" autocomplete="off"
+                        maxlength="6" id="verifCode" />
+                    <img src="../content/star.svg" alt=""
+                        style="position: absolute; bottom: 0; left: 0; transform: translate(-1rem, 1rem);">
+                </div>
+                <p id="textbox" class="login-box-text"></p>
+                <button class="btn login-form" id="login-btn" onclick="loginClick(event)" style="position: relative; padding:
+                    none !important">Login</button>
+
+                <div class="star-container" style="position: absolute; bottom: 0; right: 0; ">
+                    <img src="../content/star.svg" alt=""
+                        style="position: absolute; bottom: 0; right: 0; transform: translate(1rem, 1rem);">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- <div class="stars">
         <script src="js/stars.js"></script> -->
 
     <nav id="navbar" class="hideOnMobile">
         <div class='nav-buttons'>
             <!-- TODO: add functionality -->
-            <div class="lang-change">
-                <img src="./content//languages/correctUK.png" alt="">
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                    fill="white">
-                    <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
-                </svg> -->
+            <div class="lang-change" onclick="toggleLanguage()">
+                <img src="./content/languages/uk.png" id='currentFlag' style="height: 40px; width: auto;" alt="English">
             </div>
 
             <!-- <button class="btn" id="lang" , onclick="changeLanguange()">EN</button> -->
@@ -51,7 +77,7 @@
             <!-- personal cabinet button -->
             <a class="pc-container hide" href="./personalCabinet.html">
                 <img src="./content/skin-icon.png" alt="" class="skin-icon">
-                <p id="pc-name">Hutsul</p>
+                <p class="pc-name"></p>
                 <div class="pc-balance">
                     <img src="./content/dollar.png" class="currency-img" alt="">
                     <p id="pc-balance-val">69</p>
@@ -77,6 +103,15 @@
             style="margin-top: 20px;">Donate</button>
         <button class="sidebar-btn-container nav-btn" , onclick="location.href='./map.html'">Map</button>
         <button class="sidebar-btn-container nav-btn" , onclick="location.href='./earn.html'">Earn</button>
+        <button id="mLogin-sbtn" class="btn" onclick="connectAccount()">Connect</button>
+        <a class="pc-container hide" href="./personalCabinet.html">
+            <img src="./content/skin-icon.png" alt="" class="skin-icon">
+            <p class="pc-name">Hutsul</p>
+            <div class="pc-balance">
+                <img src="./content/dollar.png" class="currency-img" alt="">
+                <p id="pc-balance-val">69</p>
+            </div>
+        </a>
         <!-- <div class="dropdown">
             <button class="dropbtn">Other</button>
             <div class="dropdown-content">
@@ -85,8 +120,10 @@
             </div>
         </div> -->
 
-        <img src="./content//languages/correctUK.png"
-            style="height: 40px; width: auto; margin-top: auto; margin-bottom: 10px;" alt="">
+        <div class="sb-lang-change" onclick="toggleLanguage()">
+            <img src="./content/languages/uk.png" id='currentFlag' style="height: 40px; width: auto;" alt="English">
+        </div>
+
         <!-- <button class="btn" style="margin-top: auto;" id="lang" , onclick="changeLanguange()">EN</button> -->
     </nav>
 
@@ -97,17 +134,72 @@
 
     <!-- desktop nav bar: -->
 
-
+    <script src="./loginForm/login.js"></script>
     <script>
+        //initial page load
+        document.addEventListener("DOMContentLoaded", () => {
+            let lang = localStorage.getItem('lang') || 'en';
+            localStorage.setItem('lang', lang);
+
+            toggleFlag();
+            toggleLanguage(false);
+
+            if (sessionStorage.getItem('username')) {
+                document.getElementById('mLogin-btn').classList.add('hide');
+                document.getElementById('mLogin-sbtn').classList.add('hide');
+                document.querySelectorAll('.pc-container').forEach(i => i.classList.remove('hide'));
+                document.querySelectorAll('.pc-name').forEach(i => i.innerText = sessionStorage.getItem('username'));
+            }
+        })
+        // changing language
+        const translations = {
+            en: {
+                loginBtn: "Log in",
+                nicknameLabel: "Your Nickname",
+                donateBtn: "Donate",
+                mapBtn: "Map",
+                otherBtn: "Other",
+                connectBtn: "Connect",
+                earnBtn: "Earn",
+            },
+            ru: {
+                loginBtn: "Войти",
+                nicknameLabel: "Ваш Никнейм",
+                donateBtn: "Донат",
+                mapBtn: "Карта",
+                otherBtn: "Другое",
+                connectBtn: "Подключиться",
+                earnBtn: "Заработок ",
+            }
+        };
+
+        function toggleLanguage(toggle = true) {
+            if (toggle) localStorage.setItem('lang', (localStorage.getItem('lang') === 'en' ? 'ru' : 'en'));
+            toggleFlag();
+
+            let lang = localStorage.getItem('lang');
+            document.getElementById('login-btn').innerText = translations[lang].loginBtn;
+            document.querySelector('.login-box-text').innerText = translations[lang].nicknameLabel;
+            document.querySelectorAll('.nav-btn')[0].innerText = translations[lang].otherBtn;
+            document.querySelectorAll('.nav-btn')[1].innerText = translations[lang].donateBtn;
+            document.querySelectorAll('.nav-btn')[2].innerText = translations[lang].mapBtn;
+            document.getElementById('mLogin-btn').innerText = translations[lang].connectBtn;
+
+            document.querySelectorAll('.sidebar-btn-container')[0].innerText = translations[lang].donateBtn;
+            document.querySelectorAll('.sidebar-btn-container')[1].innerText = translations[lang].mapBtn;
+            document.querySelectorAll('.sidebar-btn-container')[2].innerText = translations[lang].earnBtn;
+            document.getElementById('mLogin-sbtn').innerText = translations[lang].connectBtn;
+        }
+
+        function toggleFlag() {
+            let currentFlag = document.querySelectorAll("#currentFlag");
+            currentFlag.forEach(i => i.src = (localStorage.getItem('lang') === 'ru') ? "./content/languages/russia.png" : "./content/languages/uk.png");
+        }
+        //sidebar functionality
         let menuIcon = document.getElementById("menuIcon");
         let closeIcon = document.getElementById("closeIcon");
         let sidebar = document.getElementById("sidebar");
         let isSidebar = false;
-        var userLang = navigator.language || navigator.userLanguage;
-        var online = 0;
-        if (userLang != "ru")
-            userLang = "en";
-
         function toggleSidebar() {
             if (isSidebar) {
                 closeIcon.style.display = "none";
