--- a/main.html
+++ b/main.html
@@ -95,7 +95,7 @@
         <img id='earth' src="content/earth.png" , onhover="func()" , class="move-up-down" />
     </div> -->
 
-    <!-- desktop nav bar: -->
+    <!-- desktop nav bar.: -->
 
 
     <script>
